--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,9 +1,4 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
-<link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
-    />
+
 <div class="container">
   <!-- Header -->
   <div id="header">
@@ -59,7 +54,7 @@
       <div class="header-bottom">
           <ul class="nav">
               <li>
-                      <a href="../html/listProduct.html">
+                      <a href="./listProduct">
                           <i class="fa-sharp fa-solid fa-list"></i>
                           Danh mục sản phẩm
                           <i class="nav-arrow-down ti-angle-down"></i>
@@ -72,11 +67,11 @@
                           <li class="type_category"><a href="./productBanhmi.html"> Bánh mì</a></li>
                       </ul>
               </li>
-              <li class="main now"><a href="../html/main.html"><span> Trang chủ</span></a></li>
-              <li class="promotion"><a href="./promotion.html">Khuyến mãi</a></li>
-              <li class="story btnn"><a href="./aboutUs.html">Câu chuyện thương hiệu</a></li>
-              <li class="blog"><a href="./blog.html">Tin tức</a></li>
-              <li class="contact"><a href="./contact.html">Liên hệ</a></li>
+              <li class="main now"><a href=""><span> Trang chủ</span></a></li>
+              <li class="promotion"><a href="./promotion">Khuyến mãi</a></li>
+              <li class="story btnn"><a href="./aboutUs">Câu chuyện thương hiệu</a></li>
+              <li class="blog"><a href="./blog">Tin tức</a></li>
+              <li class="contact"><a href="./contact">Liên hệ</a></li>
           </ul>
       </div>
   </div>
