--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+:root{
+  --primary_color: #e75c6b;
+  --button_color:#F38a95;
+  --background_color:#f9f2f2;
+  --hover_color:#81C6E8;
+}
+*{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 19px;
+}
+
