--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
               </a>
               <ul class="sub-nav">
                   <li>
-                      <a href="./myAccount.html">
+                      <a href="./myAccount">
                           <i class="fa-solid fa-user"></i> Tài khoản của tôi
                       </a>
                   </li>
