--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,12 +23,12 @@
                       </a>
                   </li>
                   <li>
-                      <a href="./register.html">
+                      <a href="./register">
                           <i class="fa-solid fa-user-plus"></i> Đăng kí
                       </a>
                   </li>
                   <li>
-                      <a href="./login.html">
+                      <a href="./login">
                           <i class="fa-solid fa-right-to-bracket"></i> Đăng nhập
                       </a>
                   </li>
