Quản lý đơn hàng, Chi tiết đơn hàng

--- a/Admin/src/app/app.component.html
+++ b/Admin/src/app/app.component.html
@@ -313,5 +313,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <app-header></app-header>
+<app-chi-tiet-don-hang></app-chi-tiet-don-hang>
+<app-chi-tiet-don-hang></app-chi-tiet-don-hang>
 <div style="margin-left: 300px;margin-top: 10px;">
 <router-outlet></router-outlet>
