Quản lý khách hàng_front end

--- a/Admin/src/app/app.component.html
+++ b/Admin/src/app/app.component.html
@@ -315,5 +315,7 @@
 <app-header></app-header>
 <app-chi-tiet-don-hang></app-chi-tiet-don-hang>
 <app-chi-tiet-don-hang></app-chi-tiet-don-hang>
+<app-customer-management></app-customer-management>
 <div style="margin-left: 300px;margin-top: 10px;">
 <router-outlet></router-outlet>
+
