Quản lý sản phẩm - FE

--- a/Admin/src/app/header/header.component.html
+++ b/Admin/src/app/header/header.component.html
@@ -53,7 +53,7 @@
           </a>
       </li>
       <li>
-          <a href="">
+          <a href="./product-management">
               <span class="icon"><i class="fas fa-boxes"></i></span>
               <span class="item">Sản phẩm</span>
           </a>
