--- a/Admin/src/app/app.component.html
+++ b/Admin/src/app/app.component.html
@@ -313,9 +313,9 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <app-header></app-header>
+<!-- <app-chi-tiet-don-hang></app-chi-tiet-don-hang>
 <app-chi-tiet-don-hang></app-chi-tiet-don-hang>
-<app-chi-tiet-don-hang></app-chi-tiet-don-hang>
-<app-customer-management></app-customer-management>
+<app-customer-management></app-customer-management> -->
 <div style="margin-left: 300px;margin-top: 10px;">
 <router-outlet></router-outlet>
 
