--- a/Admin/src/app/header/header.component.html
+++ b/Admin/src/app/header/header.component.html
@@ -59,7 +59,7 @@
           </a>
       </li>
       <li>
-          <a href="">
+          <a href="./promotion">
               <span class="icon"><i class="fas fa-dolly"></i></span>
               <span class="item">Khuyến mãi</span>
           </a>
