--- a/Admin/src/app/header/header.component.html
+++ b/Admin/src/app/header/header.component.html
@@ -6,7 +6,7 @@
      <div class="btn-search" >
       <form class="inputSearch" onsubmit="submitForm(event)">
           <input type="text" class="search" id="inputvalue" placeholder="Tìm kiếm">
-          <button class="ti-search"><i style="color: var(--primary_color);font-size: 25px;display: flex; align-items: center;"  class="fa-solid fa-magnifying-glass"></i></button>
+          <button class="ti-search"><i style="color: var(--primary_color);font-size: 25px;display: flex; align-items: center;"  class="fa-solid fa-magnifying-glass"></i>o</button>
       </form>
      </div>
       <div class="right-header-top">
@@ -65,7 +65,7 @@
           </a>
       </li>
       <li>
-          <a href="">
+          <a href="./blog">
               <span class="icon"><i class="fas fa-cash-register"></i></span>
               <span class="item">Blog</span>
           </a>
