--- a/Admin/src/app/blog-management/blog-management.component.html
+++ b/Admin/src/app/blog-management/blog-management.component.html
@@ -46,7 +46,7 @@
               <td>{{p.Title}}</td>
               <td>{{p.Start}}</td>
               <td>{{p.Author}}</td>
-              <td>{{p.Start}}</td>
+              <td>{{p.View}}</td>
               <td class="d-flex justify-content-end" >
                 <div class="table-action">
                   <fa-icon (click)="actionUpdate(1)" [icon]="faEdit" class="edit-icon"
