--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -304,5 +304,6 @@
   }
 </style>
 <app-header></app-header>
+<app-product></app-product>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
