--- a/Client/src/app/login/login.component.html
+++ b/Client/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<body>
+<!-- <body>
   <div class="container">
     <div class="row px-3">
       <div class="col-lg-10 col-xl-9 card flex-row mx-auto px-0">
@@ -13,11 +13,12 @@
           <h3 class="title text-center mt-4">
             Đăng nhập tài khoản
           </h3>
-          <form class="form-box px-3" (ngSubmit)="login()" #loginForm="ngForm">
-            <p style="color: red;" *ngIf="error" class="error">Tên tài khoản của bạn hoặc Mật khẩu không đúng, vui lòng thử lại</p>
+          <form class="form-box px-3" (ngSubmit)="login()" [formGroup]="loginForm">
+            <p style="color: red;" class="error">Tên tài khoản của bạn hoặc Mật khẩu không đúng, vui lòng thử lại</p>
+            <p>{{message}}</p>
             <div class="form-input">
               <span><i class="fa fa-envelope-o"></i></span>
-              <input type="" id="user" name="user" #user="ngModel" [(ngModel)]="model.user"
+              <input type="text"  name="user" id="userid" #user="ngModel" [(ngModel)]="model.user"
           required email class="form-control" placeholder="Nhập tài khoản" [class.is-valid]="user.invalid && user.touched">
             </div>
             <div>
@@ -30,7 +31,7 @@
             </div>
             <div class="form-input">
               <span><i class="fa fa-key"></i></span>
-              <input type="password" id="password" name="password" [(ngModel)]="model.password" minlength="6" required #password="ngModel"
+              <input type="password" id="password" [(ngModel)]="model.password" minlength="6" required #password="ngModel"
               class="form-control" placeholder="Nhập mật khẩu" [class.is-valid]="password.invalid && password.touched">
             </div>
             <div>
@@ -44,7 +45,6 @@
 
             <div class="mb-3">
               <div class="custom-control custom-checkbox">
-                <input type="checkbox" name="rememberMe" [(ngModel)]="rememberMe" class="custom-control-input" id="cb1" name="">
                 <label class="custom-control-label" for="cb1" style="font-family: 'Inter', sans-serif ; color: #E75C6B;">Ghi nhớ đăng nhập</label>
               </div>
             </div>
@@ -54,8 +54,6 @@
               <button type="submit" class="btn-login">
                 Đăng nhập
               </button>
-
-            <p *ngIf="loggedIn" class="success">You are now logged in.</p>
           </div>
 
             <div class="text-right">
@@ -63,16 +61,11 @@
                 Quên mật khẩu?
               </a>
             </div>
-
-
-
-
-
             <hr class="my-4">
 
             <div class="text-center mb-2 "  style="font-family: 'Inter', sans-serif;">
               Bạn chưa có tài khoản?
-              <a href="./register.html" class="register-link">
+              <a href="./register" class="register-link">
                 Đăng ký ngay!
               </a>
             </div>
@@ -82,4 +75,68 @@
     </div>
   </div>
 
-</body>
+</body> -->
+
+
+
+<!-- <div class="container"><div class="col-md-6 col-md-offset-3 loginBox"><h3>Log In</h3>
+  <p>{{message}}</p>
+  <form (ngSubmit)="login()" [formGroup]="loginForm" ><div class="form-group clearfix">
+                  <label class="col-md-3 col-sm-5 col-xs-12" for="userid">Userid</label>
+  <div class="col-md-9 col-sm-7 col-xs-12">
+                  <input class="form-control"formControlName="userid" type="text"></div></div>
+  <div class="form-group clearfix">
+                  <label class="col-md-3 col-sm-5 col-xs-12" for="password">Password</label>
+  <div class="col-md-9 col-sm-7 col-xs-12">
+                  <input class="form-control" formControlName="password" type="password"></div></div>
+  <div class="col-xs-12 form-group text-right"><button class="btn btn-success" type="submit">Login</button></div></form></div></div> -->
+
+
+  <body>
+    <div class="container" >
+      <div class="row px-3">
+        <div class="col-lg-10 col-xl-9 card flex-row mx-auto px-0">
+          <div class="img-left d-none d-md-flex"></div>
+
+          <div class="card-body">
+            <div class="row-cols-1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="black" onclick="comeBack()" class="bi bi-x-lg" viewBox="0 0 16 16">
+                  <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
+                </svg>
+          </div>
+            <h3 class="title text-center mt-4">
+              Đăng nhập tài khoản
+            </h3>
+            <p style="color: red;" class="error">{{message}}</p>
+    <form class="form-box px-3" (ngSubmit)="login()" [formGroup]="loginForm" ><div class="form-group clearfix">
+
+    <div class="form-input">
+      <span><i class="fa fa-envelope-o"></i></span>
+                    <input placeholder="Nhập tài khoản" class="form-control"  formControlName="userid" type="text"></div></div>
+    <div class="form-group clearfix">
+
+    <div class="form-input">
+      <span><i class="fa fa-key"></i></span>
+                    <input  placeholder="Nhập mật khẩu"  class="form-control" formControlName="password" type="password" ></div></div>
+
+                    <small *ngIf="loginForm.controls['password'].errors?.['minlength']">
+                      Mật khẩu phải có ít nhất 6 kí tự.
+                    </small>
+    <div class="col-xs-12 form-group text-right"><button class="btn btn-success" type="submit">Đăng nhập</button></div>
+    <div class="text-right">
+      <a href="./forgotPassword" class="forget-link">
+        Quên mật khẩu?
+      </a>
+    </div>
+    <hr class="my-4">
+
+    <div class="text-center mb-2 "  style="font-family: 'Inter', sans-serif;">
+      Bạn chưa có tài khoản?
+      <a href="./register" class="register-link">
+        Đăng ký ngay!
+      </a>
+    </div>
+  </form></div></div>
+          </div>
+        </div>
+  </body>
