--- a/Client/src/app/about-us/about-us.component.html
+++ b/Client/src/app/about-us/about-us.component.html
@@ -137,6 +137,21 @@
               </tr>
           </table>
       </div>
+      <div class="member">
+        <table>
+            <tr class="co1">
+                <td>
+                    <img src="../assets/img/aboutUs/6.png" alt="">
+                </td>
+            </tr>
+            <tr class="co2">
+                <td>
+                   <p class="name-member">Ánh Trúc</p>
+                   <p></p>
+                </td>
+            </tr>
+        </table>
+    </div>
 
   </div>
 </div>
