sửa lại Aboutus

--- a/Client/src/app/about-us/about-us.component.html
+++ b/Client/src/app/about-us/about-us.component.html
@@ -141,13 +141,13 @@
         <table>
             <tr class="co1">
                 <td>
-                    <img src="../assets/img/aboutUs/6.png" alt="">
+                    <img src="../assets/img/aboutUs/6.png" alt="" width="200px"  height="220px">
                 </td>
             </tr>
             <tr class="co2">
                 <td>
                    <p class="name-member">Ánh Trúc</p>
-                   <p></p>
+                   <p> Customer Assistant</p>
                 </td>
             </tr>
         </table>
