--- a/Client/src/app/about-us/about-us.component.css
+++ b/Client/src/app/about-us/about-us.component.css
@@ -52,6 +52,8 @@ justify-content: center;
 .content2{
     display: flex;
     text-align: center;
+    /* flex-direction: row; */
+    flex-wrap: wrap;
     justify-content: center;
 }
 table, tr, td {
