tìm kiếm sản phẩm theo giá, thêm giỏ hàng

--- a/Client/src/app/list-product/list-product.component.html
+++ b/Client/src/app/list-product/list-product.component.html
@@ -32,13 +32,13 @@
           </div>
           <div id="products">
             <section class="hot-products">
-              <div class="swiper mySwiper hot-product">
+              <div class=" hot-product">
                 <div class=" products" *ngFor="let product of products">
-                  <div class="swiper-slide product">
+                  <div class=" product">
                     <div class="img-product">
                       <a href="#"><img style="height: 200px " src="{{product.Img[0]}}"></a>
                       <div class="cart-love">
-                        <a href=""> <i class="fa-solid fa-cart-shopping"></i></a> <a href="#"> <i class="fa-solid fa-heart"></i></a>
+                        <a href="" (click)="postCart()"> <i class="fa-solid fa-cart-shopping"></i></a> <a href="#"> <i class="fa-solid fa-heart"></i></a>
                      </div>
                     </div>
                     <p class="name">{{product.Name}}</p>
